@@ -49,6 +49,9 @@ static void gtk_freq_knob_init       (GtkFreqKnob      *list);
 static void gtk_freq_knob_destroy    (GtkObject       *object);
 static void gtk_freq_knob_update     (GtkFreqKnob *knob);
 static void button_clicked_cb        (GtkWidget *button, gpointer data);
+static gboolean on_button_press      (GtkWidget *digit, GdkEventButton *event, gpointer data);
+static gboolean on_button_scroll     (GtkWidget *digit, GdkEventScroll *event, gpointer data);
+
 
 static GtkHBoxClass *parent_class = NULL;
 
@@ -164,7 +167,7 @@ gtk_freq_knob_new (gdouble val, gboolean buttons)
     gint       delta;
 
 
-     widget = g_object_new (GTK_TYPE_FREQ_KNOB, NULL);
+    widget = g_object_new (GTK_TYPE_FREQ_KNOB, NULL);
 
     GTK_FREQ_KNOB(widget)->value = val;
     
@@ -174,10 +177,32 @@ gtk_freq_knob_new (gdouble val, gboolean buttons)
     for (i = 0; i < 10; i++) {
         /* labels */
         GTK_FREQ_KNOB(widget)->digits[i] = gtk_label_new (NULL);
-        gtk_table_attach (GTK_TABLE (table), GTK_FREQ_KNOB(widget)->digits[i],
-                          idx[i], idx[i]+1, 1, 2, GTK_SHRINK, GTK_FILL | GTK_EXPAND, 0, 0);
-    
-        if (buttons) {
+        
+        if (!buttons) {
+            /* passive display widget without event boxes or buttons */
+            gtk_table_attach (GTK_TABLE (table), GTK_FREQ_KNOB(widget)->digits[i],
+                              idx[i], idx[i]+1, 1, 2, GTK_SHRINK, GTK_FILL | GTK_EXPAND, 0, 0);
+        }
+        else {
+            /* active widget that allows changing the value */
+
+            gtk_widget_set_tooltip_text(GTK_FREQ_KNOB(widget)->digits[i],
+                                        _("Use mouse buttons and wheel to change value"));
+
+            /* Event boxes for catching mouse evetns */
+            GTK_FREQ_KNOB(widget)->evtbox[i] = gtk_event_box_new ();
+            g_object_set_data(G_OBJECT(GTK_FREQ_KNOB(widget)->evtbox[i]), "index", GUINT_TO_POINTER(i));
+            gtk_container_add(GTK_CONTAINER(GTK_FREQ_KNOB(widget)->evtbox[i]),
+                              GTK_FREQ_KNOB(widget)->digits[i]);
+            gtk_table_attach (GTK_TABLE (table), GTK_FREQ_KNOB(widget)->evtbox[i],
+                              idx[i], idx[i]+1, 1, 2, GTK_SHRINK, GTK_FILL | GTK_EXPAND, 0, 0);
+                          
+            g_signal_connect (GTK_FREQ_KNOB(widget)->evtbox[i], "button_press_event",
+                              (GtkSignalFunc) on_button_press, widget);
+            g_signal_connect (GTK_FREQ_KNOB(widget)->evtbox[i], "scroll_event",
+                              (GtkSignalFunc) on_button_scroll, widget);
+
+            
             /* UP buttons */
             GTK_FREQ_KNOB(widget)->buttons[i] = gtk_button_new ();
             
@@ -232,12 +257,12 @@ gtk_freq_knob_new (gdouble val, gboolean buttons)
     gtk_container_add (GTK_CONTAINER (widget), table);
     gtk_widget_show_all (widget);
 
-     return widget;
+    return widget;
 }
 
 
 /** \brief Set the value of the frequency control widget.
- * \param[in] knob THe frequency control widget.
+ * \param[in] knob The frequency control widget.
  * \param[in] val The new value.
  * 
  */
@@ -315,4 +340,139 @@ button_clicked_cb (GtkWidget *button, gpointer data)
     /* emit "freq_changed" signal */
     g_signal_emit (G_OBJECT (data), freq_changed_signal, 0);
 }
+
+
+/** \brief Manage button press events
+ *  \param digit Pointer to the event box that received the event
+ *  \param event Pointer to the GdkEventButton that contains details for te event
+ *  \param data Pointer to the GtkFreqKnob widget (we need it to update the value)
+ *  \return Always TRUE to prevent further propagation of the event
+ *
+ * This function is called when a mouse button is pressed on a digit. This is used
+ * to increment or decrement the value:
+ * - Left button: up
+ * - Right button: down
+ * - Middle button: set digit to 0 (TBC)
+ * 
+ * Wheel up/down are managed in a separate callback since these are treated as scroll events
+ * rather than button press events (they used to be button press events though)
+ * 
+ * The digit labels are stored in an array. To get the amount of change corresponding to the
+ * clicked label we can convert the index (attached to the evtbox): delta = 10^(9-index)
+ *
+ * Whether the delta is positive or negative depends on which mouse button triggered the event.
+ */
+static gboolean on_button_press (GtkWidget *evtbox,
+                                 GdkEventButton *event,
+                                 gpointer data)
+{
+    GtkFreqKnob *knob = GTK_FREQ_KNOB(data);
+    guint idx = GPOINTER_TO_UINT(g_object_get_data (G_OBJECT (evtbox), "index"));
+    gdouble delta = pow(10, 9-idx);
+    gdouble value;
+    
+
+    if (delta < 1.0) {
+        /* no change */
+        return TRUE;
+    }
+    
+    if (event->type != GDK_BUTTON_PRESS) {
+        /* wrong event (not possible?) */
+        return TRUE;
+    }
+
+
+    switch (event->button) {
+
+        /* left button */
+    case 1:
+        value = gtk_freq_knob_get_value(knob) + delta;
+        gtk_freq_knob_set_value(knob, value);
+        g_signal_emit(G_OBJECT (data), freq_changed_signal, 0);
+        break;
+
+        /* middle button */
+    case 2:
+        break;
+
+        /* right button */
+    case 3:
+        value = gtk_freq_knob_get_value(knob) - delta;
+        gtk_freq_knob_set_value(knob, value);
+        g_signal_emit(G_OBJECT (data), freq_changed_signal, 0);
+        break;
+
+    default:
+        break;
+    }
+
+
+    return TRUE;
+}
+
+/** \brief Manage scroll wheel events
+ *  \param digit Pointer to the event box that received the event
+ *  \param event Pointer to the GdkEventScroll that contains details for te event
+ *  \param data Pointer to the GtkFreqKnob widget (we need it to update the value)
+ *  \return Always TRUE to prevent further propagation of the event
+ *
+ * This function is called when the mouse wheel is moved up or down. This is used to increment
+ * or decrement the value.
+ * 
+ * Button presses are managed in a separate callback since these are treated as different
+ * events.
+ * 
+ * The digit labels are stored in an array. To get the amount of change corresponding to the
+ * clicked label we can convert the index (attached to the evtbox): delta = 10^(9-index)
+ *
+ * Whether the delta is positive or negative depends on the scroll direction.
+ */
+static gboolean on_button_scroll (GtkWidget *evtbox,
+                                  GdkEventScroll *event,
+                                  gpointer data)
+{
+    GtkFreqKnob *knob = GTK_FREQ_KNOB(data);
+    guint idx = GPOINTER_TO_UINT(g_object_get_data (G_OBJECT (evtbox), "index"));
+    gdouble delta = pow(10, 9-idx);
+    gdouble value;
+
+
+    if (delta < 0.01) {
+        /* no change, user clicked on sign or decimal separator */
+        return TRUE;
+    }
+    
+    if (event->type != GDK_SCROLL) {
+        /* wrong event (not possible?) */
+        return TRUE;
+    }
+
+
+    switch (event->direction) {
+
+        /* decrease value by delta */
+    case GDK_SCROLL_DOWN:
+    case GDK_SCROLL_LEFT:
+        value = gtk_freq_knob_get_value(knob) - delta;
+        gtk_freq_knob_set_value(knob, value);
+        g_signal_emit(G_OBJECT (data), freq_changed_signal, 0);
+        break;
+
+        /* increase value by delta */
+    case GDK_SCROLL_UP:
+    case GDK_SCROLL_RIGHT:
+        value = gtk_freq_knob_get_value(knob) + delta;
+        gtk_freq_knob_set_value(knob, value);
+        g_signal_emit(G_OBJECT (data), freq_changed_signal, 0);
+        break;
+
+    default:
+        break;
+    }
+
+
+    return TRUE;
+}
+
 
